k8s/prod/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vacancy-backend
  namespace: vacancy-prod
spec:
  replicas: 3
  selector:
    matchLabels:
      app: vacancy-backend
  template:
    metadata:
      labels:
        app: vacancy-backend
    spec:
      containers:
        - name: backend
          image: vacancy-backend:latest
          ports:
            - containerPort: 8080
      imagePullPolicy: IfNotPresent
