k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacancy-backend
  namespace: vacancy-prod
spec:
  selector:
    app: vacancy-backend
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
