k8s/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: vacancy-frontend
  namespace: vacancy-prod
spec:
  type: LoadBalancer
  selector:
    app: vacancy-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
